--- a/_config.yml
+++ b/_config.yml
@@ -87,22 +87,22 @@ author:
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=0vWtvs0AAAAJ&hl=en"
-  email            :
+  email            : "fuy34bkup@gmail.com"
   researchgate     : "https://www.researchgate.net/profile/Fengting-Yang-2"
-  uri              :
+  uri              : 
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/fuy34"
+  github           : "/fuy34"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/fengting-yang-315830126/"
+  linkedin         : "/fengting-yang-315830126/"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
