--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,9 @@ main:
   # - title: "Talks"
   #   url: /talks/    
 
+  - title: "Experience"
+    url: #/experience/   
+
   # - title: "Teaching"
   #   url: /teaching/    
     
@@ -16,7 +19,7 @@ main:
   #   url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: https://fuy34.github.io/files/CV_github.pdf
     
   - title: "Misc"
     url: /markdown/
