--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
   #   url: /talks/    
 
   - title: "Experience"
-    url: #/experience/   
+    url: /experience/   
 
   # - title: "Teaching"
   #   url: /teaching/    
