--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Fengting Yang"
-  avatar           : "phd.jpg"
+  avatar           : "phd.png"
   bio              : "Ph.D. in Computer Vision "
   location         : "Penn State"
   employer         :
